<resources>
    <string name="Add">Add</string>
    <string name="AddCustomCommand">Add Custom Command</string>
    <string name="AddNew">Add New</string>
    <string name="AddNewDevices">Add New Devices</string>
    <string name="AddNewDevicesSub1">The following procedure will walk you through the process of getting a new DreamScreen or SideKick connected to your home WiFi network.</string>
    <string name="AddNewDevicesSub2">Note: The Add New procedure only needs to be performed once per new device. After the device has successfully connected once, it will then be able to reconnect automatically.</string>
    <string name="AddNewText">Add New Devices to the Network</string>
    <string name="AddWiFiNetwork">Add WiFi Network</string>
    <string name="AddaNetwork">Add a Network</string>
    <string name="AdvancedSettings">Advanced Settings</string>
    <string name="AdvancedSettingsSub">Zone Control | CEC | HPD</string>
    <string name="AmazonAlexa">Amazon Alexa</string>
    <string name="AppTutorial">App Tutorial</string>
    <string name="AppTutorialSub">Review the DreamScreen App</string>
    <string name="Back">Back</string>
    <string name="BadDeviceFound1">It appears that \"</string>
    <string name="BadDeviceFound2">\" is experiencing a communication error.</string>
    <string name="BadDeviceFoundStep1">Make sure the firmware is up to date.</string>
    <string name="BadDeviceFoundStep2">Try removing all HDMI cables and power cycling the hub.</string>
    <string name="Bridges">Bridges:</string>
    <string name="Cancel">Cancel</string>
    <string name="Canceling">Canceling</string>
    <string name="ColorSettings">Color Settings</string>
    <string name="ColorSettingsSub">Saturation</string>
    <string name="ConnectLinked">Connect\10Linked</string>
    <string name="ConnectingToNetwork">Connecting To Network</string>
    <string name="Continue">Continue</string>
    <string name="ContinueUpdating">Continue Updating</string>
    <string name="CustomIRCommands">Custom IR Commands</string>
    <string name="DONE">DONE</string>
    <string name="DemotheApp">Demo the App</string>
    <string name="Discover">Discover</string>
    <string name="DiscoveringHueBridges">Discovering Hue Bridges</string>
    <string name="DiscoveringLifxBulbs">Discovering Lifx Bulbs</string>
    <string name="DreamScreenAccount">DreamScreen Account</string>
    <string name="Edit">Edit</string>
    <string name="EntertainmentGroups">Entertainment Groups:</string>
    <string name="EnteryourPassword">Enter your Password</string>
    <string name="Error">Error</string>
    <string name="FUFDialog1">Unplug the DreamScreen and wait five seconds.</string>
    <string name="FUFDialog2">Plug DreamScreen back in and wait five more seconds.</string>
    <string name="FUFDialog3">Restart the app.</string>
    <string name="FUFDialogSub">Something went wrong during the firmware update.</string>
    <string name="FactoryReset">Factory Reset</string>
    <string name="FactoryResetDialogText">This will delete all data from the device, including the configured WiFi network. This cannot be undone.</string>
    <string name="FactoryResetSub">Restores device to factory state.</string>
    <string name="FeatureDisabledforSideKick">Feature Disabled for SideKick</string>
    <string name="FeatureDisabledforSideKickSub">Music Mode and Video Mode are only applicable when SideKick is grouped with a DreamScreen.</string>
    <string name="FinalizingAccountSetup">Finalizing Account Setup</string>
    <string name="Finishing">Finishing</string>
    <string name="FirmwareUpdate">Firmware Update</string>
    <string name="FirmwareUpdateDialogText">While updating, please keep the app running and the screen on. This process may take several minutes and should not be interrupted.</string>
    <string name="FirmwareUpdateFailed">Firmware Update Failed</string>
    <string name="FirmwareUpdateNeeded">Firmware Update Available</string>
    <string name="FirmwareUpdateNotNeeded">Firmware Up To Date</string>
    <string name="FirmwareVersion">Firmware Version</string>
    <string name="FrequentlyAskedQuestions">Frequently Asked Questions</string>
    <string name="GoogleAssistant">Google Assistant</string>
    <string name="Groups">Groups</string>
    <string name="HelpFromOurWebsite">Help - From Our Website</string>
    <string name="High">High</string>
    <string name="HueandLIFX">Hue and LIFX</string>
    <string name="IPAddress">IP Address</string>
    <string name="IRRemoteEnabled">IR Remote Enabled</string>
    <string name="IRRemoteSettings">IR Remote Settings</string>
    <string name="InstallationSettings">Installation Settings</string>
    <string name="InstallationSettingsSub">LED Count | Orientation</string>
    <string name="IntegrationSettings">Integration Settings</string>
    <string name="LIFXLights">LIFX Lights</string>
    <string name="Lights">Lights:</string>
    <string name="LinkThisConnect">Link this\10Connect</string>
    <string name="LogitechHarmony">Logitech Harmony</string>
    <string name="Low">Low</string>
    <string name="Med">Med</string>
    <string name="ModifyingAccount">Modifying Account</string>
    <string name="MusicSettings">Music Settings</string>
    <string name="MusicSettingsSub">Visualization</string>
    <string name="NEXT">NEXT</string>
    <string name="NewDevicesAdded">New Devices Added</string>
    <string name="NewDevicesAddedSub">The following devices have been added recently:</string>
    <string name="NewDevicesFound">New Devices Found</string>
    <string name="NewDevicesFoundSub">Select the devices to add to your WiFi network</string>
    <string name="NoBulbsAvailable">No Bulbs Available</string>
    <string name="NoDevicesFound">No Devices Found</string>
    <string name="NoNewDevicesAdded">No new devices have been added.</string>
    <string name="OK">OK</string>
    <string name="Off">Off</string>
    <string name="OpenSettings">Open Settings</string>
    <string name="Password">Password</string>
    <string name="PhilipsHue">Philips Hue</string>
    <string name="Reset">Reset</string>
    <string name="ResetDevice">Reset Device</string>
    <string name="RestartApp">Restart App</string>
    <string name="RestartDevice">Restart Device</string>
    <string name="RestartDeviceDialogText">This will software restart your device. No data will be lost.</string>
    <string name="RestartDeviceSub">Software restarts the device.</string>
    <string name="Restarting">Restarting</string>
    <string name="SKIP">SKIP</string>
    <string name="SearchAgain">Search Again</string>
    <string name="SectorAssignment">Sector Assignment</string>
    <string name="SectorSettings">Sector Settings</string>
    <string name="SectorSettingsSub">Assign Sectors</string>
    <string name="SelectYourWiFiNetwork">Select your WiFi Network</string>
    <string name="SetupVideos">Setup Videos</string>
    <string name="SomethingsNotRight">Something\'s not right</string>
    <string name="SomethingsNotRightSub">A new device failed to connect. The password may have been entered incorrectly. Ensure all devices are within range of your router.</string>
    <string name="StartOver">Start Over</string>
    <string name="TheseDevicesConnected">These Devices have successfully connected to your network.</string>
    <string name="Update">Update</string>
    <string name="UpdateandReset">Update and Reset</string>
    <string name="Updating">Updating</string>
    <string name="UpdatingDeviceFound">Updating Device Found</string>
    <string name="UpdatingDeviceFound1">It appears that \"</string>
    <string name="UpdatingDeviceFound2">\" is in the middle of updating. When ready, please continue updating.</string>
    <string name="VideoSettings">Video Settings</string>
    <string name="VideoSettingsSub">Saturation | Fade Rate</string>
    <string name="WiFiError">WiFi Error</string>
    <string name="WiFiErrorSub">Please verify connection to your WiFi Network</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="addCustomCommandText2">Select which command to configure. Then press the button on your remote three times for Connect to learn it.</string>
    <string name="alexaDirectionsText">In the Amazon Alexa App, search for \'DreamScreen\' under the Skills Tab. Enable and link the Skill to your DreamScreen Account.</string>
    <string name="app_name">DreamScreen</string>
    <string name="app_signin_redirect">dreamscreen://app/signin_redirect</string>
    <string name="app_signout_redirect">dreamscreen://app/signout_redirect</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="googleDirectionsText">In the Google Assistant App, say \'Talk to DreamScreen\'. You will be prompted to link your DreamScreen account.</string>
    <string name="gpsDialog1">Enable Location Services?</string>
    <string name="gpsDialog2">This app will not work properly with Location Services turned off.</string>
    <string name="gpsDialog3">To continue, open Settings, and enable Location Services.</string>
    <string name="gpsDialog4">You can disable Location Services once you are finished adding new devices.</string>
    <string name="integrationDirectionsText">To integrate Connect with Amazon Alexa or Google Assistant, first link this Connect to your DreamScreen Account, creating one if not already done so. Google Chrome must be installed on this device.</string>
    <string name="promptDeleteText">It appears a Connect has already been linked to this account. Would you like to unlink your original Connect and then continue linking this new one?</string>
    <string name="sampleAlexaPhrase">\"Hey Alexa, ask DreamScreen to switch to Video Mode\"</string>
    <string name="sampleGooglePhrase">\"Hey Google, ask DreamScreen to switch to HDMI 3.\"</string>
</resources>