<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@+id/scrollView" android:layout_width="match_parent" android:layout_height="wrap_content" android:fadeScrollbars="false">
        <LinearLayout android:orientation="vertical" android:id="@+id/linearLayout" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@+id/videoSettings_Layout" android:background="@drawable/settings_button_background" android:paddingTop="10dp" android:paddingBottom="10dp" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18sp" android:textStyle="normal" android:textColor="@color/primaryLightTextColor" android:layout_gravity="left" android:id="@+id/video_settings_label" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/VideoSettings"/>
                <TextView android:textSize="15sp" android:textStyle="normal" android:textColor="@color/secondaryLightTextColor" android:layout_gravity="left" android:id="@+id/video_settings_desc_label" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/VideoSettingsSub"/>
            </LinearLayout>
            <View android:background="@color/lightDividerColor" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="@dimen/app_line_margin" android:layout_marginBottom="@dimen/app_line_margin"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/audioSettings_Layout" android:background="@drawable/settings_button_background" android:paddingTop="10dp" android:paddingBottom="10dp" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18sp" android:textStyle="normal" android:textColor="@color/primaryLightTextColor" android:layout_gravity="left" android:id="@+id/audio_settings_label" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/MusicSettings"/>
                <TextView android:textSize="15sp" android:textStyle="normal" android:textColor="@color/secondaryLightTextColor" android:layout_gravity="left" android:id="@+id/audio_settings_desc_label" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/MusicSettingsSub"/>
            </LinearLayout>
            <View android:background="@color/lightDividerColor" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="@dimen/app_line_margin" android:layout_marginBottom="@dimen/app_line_margin"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/systemSettings_Layout" android:background="@drawable/settings_button_background" android:paddingTop="10dp" android:paddingBottom="10dp" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18sp" android:textStyle="normal" android:textColor="@color/primaryLightTextColor" android:layout_gravity="left" android:id="@+id/system_settings_label" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/AdvancedSettings"/>
                <TextView android:textSize="15sp" android:textStyle="normal" android:textColor="@color/secondaryLightTextColor" android:layout_gravity="left" android:id="@+id/system_settings_desc_label" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/AdvancedSettingsSub"/>
            </LinearLayout>
            <View android:background="@color/lightDividerColor" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="@dimen/app_line_margin" android:layout_marginBottom="@dimen/app_line_margin"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/installationSettings_Layout" android:background="@drawable/settings_button_background" android:paddingTop="10dp" android:paddingBottom="10dp" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18sp" android:textStyle="normal" android:textColor="@color/primaryLightTextColor" android:layout_gravity="left" android:id="@+id/installation_settings_label" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/InstallationSettings"/>
                <TextView android:textSize="15sp" android:textStyle="normal" android:textColor="@color/secondaryLightTextColor" android:layout_gravity="left" android:id="@+id/installation_settings_desc_label" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/InstallationSettingsSub"/>
            </LinearLayout>
            <View android:background="@color/lightDividerColor" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="@dimen/app_line_margin" android:layout_marginBottom="@dimen/app_line_margin"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/firmwareUpdate_Layout" android:paddingTop="10dp" android:paddingBottom="10dp" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18sp" android:textStyle="normal" android:textColor="@color/primaryLightTextColor" android:layout_gravity="left" android:id="@+id/firmware_update_label" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/UpdateandReset"/>
                <TextView android:textSize="15sp" android:textStyle="normal" android:textColor="@color/secondaryLightTextColor" android:layout_gravity="left" android:id="@+id/firmware_update_desc_label" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/FirmwareUpdateNotNeeded"/>
            </LinearLayout>
            <View android:background="@color/lightDividerColor" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="@dimen/app_line_margin" android:layout_marginBottom="@dimen/app_line_margin"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/help_Layout" android:background="@drawable/settings_button_background" android:paddingTop="10dp" android:paddingBottom="10dp" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18sp" android:textStyle="normal" android:textColor="@color/primaryLightTextColor" android:layout_gravity="left" android:id="@+id/help_label" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/HelpFromOurWebsite"/>
                <TextView android:textSize="15sp" android:textStyle="normal" android:textColor="#ffffff" android:layout_gravity="left" android:id="@+id/help_desc_label" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
