<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:padding="20dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="18sp" android:textColor="#000000" android:id="@+id/text1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/AddCustomCommand"/>
    <TextView android:id="@+id/text2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/addCustomCommandText2"/>
    <Spinner android:layout_gravity="center_horizontal" android:id="@+id/commandSpinner" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    <RelativeLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp">
        <ImageView android:id="@+id/check1" android:layout_width="wrap_content" android:layout_height="wrap_content" app:srcCompat="@drawable/ic_check_circle_white_24dp" android:layout_alignParentLeft="true"/>
        <ImageView android:id="@+id/check2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" app:srcCompat="@drawable/ic_check_circle_white_24dp" android:layout_toRightOf="@+id/check1"/>
        <ImageView android:id="@+id/check3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" app:srcCompat="@drawable/ic_check_circle_white_24dp" android:layout_toRightOf="@+id/check2"/>
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp">
        <TextView android:textSize="18sp" android:textColor="#075799" android:id="@+id/resetText" android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingRight="20dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Reset" android:layout_toLeftOf="@+id/cancelText"/>
        <TextView android:textSize="18sp" android:textColor="#075799" android:id="@+id/cancelText" android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingRight="20dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Cancel" android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>
